# segmented_docstring

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: docs.yaml
api-reference/: index.html
docs/: api-reference.md  index.md  user-guid.md
search/: search_index.json
src/segmented_docstring/: __init__.py  cli.py  combiner.py  config.py  splitter.py
tests/: test_cli.py  test_combiner.py  test_config.py  test_splitter.py
user-guide/: index.html
utils/: update_build_publish.sh  update_versions.py
