[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "segmented_docstrng"
version = "0.4.0"
authors = [
  { name = "Robin Collins", email = "robin@blackcat-it.com.au" },
]
description = "Split and Combine python bare code and docstrings"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: System :: Logging",
]

[project.urls]
"Homepage" = "https://github.com/robin-collins/segmented_docstring"
"Bug Tracker" = "https://github.com/robin-collins/segmented_docstring/issues"
"Documentation" = "https://robin-collins.github.io/segmented_docstring/"

[tool.hatch.build.targets.wheel]
packages = ["src/segmented_docstring"]

[tool.pylint.master]
init-hook='import sys; sys.path.append("src")'

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
]

[tool.pylint.format]
max-line-length = "100"